# agespec

./: README.md  environment.yml  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.rst
python/agespec/: ann.py  monte.py  utils.py
