[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[project]
name = "agespec"
version = "1.0.0"
dependencies = [
  "numpy",
  "matplotlib",
  "astropy",
  "scipy",
  "dlnpyutils",
  "thedoppler",
  "torch",
  "theborg",
]
requires-python = ">=3.8"
authors = [
  {name = "David Nidever", email = "dnidever@montana.edu"},
]
maintainers = [
  {name = "David Nidever", email = "dnidever@montana.edu"}
]
description = "Spectroscopy with the Atomic Genesis Explorer"
readme = "README.rst"
license = {file = "LICENSE.txt"}
keywords = ["spectroscopy", "as5", "atomic genesis explorer", "radial velocity", "abundances"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python"
]

[project.optional-dependencies]
gui = ["PyQt5"]
cli = [
  "rich",
  "click",
]

[project.urls]
#Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/dnidever/agespec"
#Issues = "https://github.com/dnidever/agespec/issues"
#Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
spam-cli = "spam:main_cli"

#[project.gui-scripts]
#spam-gui = "spam:main_gui"

[project.entry-points."spam.magical"]
tomatoes = "spam:main_tomatoes"